[REF][12.0] purchase: 11249 Traducciones euskera

--- a/stock_picking_report_valued/i18n/eu_ES.po
+++ b/stock_picking_report_valued/i18n/eu_ES.po
@@ -20,7 +20,7 @@ msgstr ""
 #. module: stock_picking_report_valued
 #: model_terms:ir.ui.view,arch_db:stock_picking_report_valued.valued_report_picking
 msgid "<strong>Discount</strong>"
-msgstr "<strong>Deskontu</strong>"
+msgstr "<strong>Deskontua</strong>"
 
 #. module: stock_picking_report_valued
 #: model_terms:ir.ui.view,arch_db:stock_picking_report_valued.valued_report_picking
